# rocket-challenge

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
data/: data.csv
src/: main.rs
